ligthouse contrast button btn whatsapp fixing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,7 @@ body {
 .share  .btn-whatsapp {
   width: 144px;
   height: 42px;
-  background-color: #3BA72F;
+  background-color: #3498db;
   color: white;
   display: block;
   border-radius: 4px;
